--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /build
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 pnpm-debug.log*
@@ -54,3 +54,9 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Uploads
+uploads/
+
+# Documentation (keep .md files tracked)
+# *.md files are intentionally NOT ignored
